# app/Http/Requests/CreateCompanyRequest.php
@@ -14,6 +14,7 @@ class CreateCompanyRequest extends BaseRequest
         return [
             'company_name' => 'required|string|max:255',
             'sector' => 'required|string|max:255',
+            'company_type_key' => 'nullable|string|max:120',
             'experience' => 'nullable|string',
             'contact' => 'nullable|array',
             'contact.email' => 'nullable|email|max:255',
